# tickets_management_langchain

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
app/: enums.py  main.py  settings.py
app/api/: ticket.py
app/core/: logging.py
app/db/: base.py  session.py
app/exceptions/: business.py  http.py
app/middlewares/: logs.py  setup.py
app/mixins/: common.py
app/models/: ticket.py
app/schemas/: ticket.py
app/services/: ticket.py
app/tests/: conftest.py
app/tests/api/: test_tickets.py
