[project]
name = "tickets-management-langchain"
version = "0.1.0"
description = "REST API for ticket management built with FastAPI and SQLAlchemy and LangChain."
authors = [{name = "ckechad", email = "me@ckechad.dev"},]
license = "MIT License"
license_files =  ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[all]>=0.135.1",
    "langchain>=1.2.10",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.10",
    "langsmith>=0.7.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "commitizen>=4.13.9",
    "httpx>=0.28.1",
    "hypothesis>=6.151.9",
    "locust>=2.43.3",
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.5.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.4",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3",
]

# Ruff
# ======================
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "D"]
ignore = ["B008"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D104"]
"app/tests/*" = ["D103", "D100", "D101", "D102"]

# ======================
# MyPy (ultra strict)
# ======================
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_errors = true
exclude = ["app/tests/"]

# ======================
# Pytest
# ======================
[tool.pytest.ini_options]
pythonpath = ["."]
minversion = "9.0"
#addopts = "-ra -q --strict-markers --strict-core --cov=. --cov-report=term-missing --doctest-modules"
testpaths = ["app/tests"]
anyio_mode = "auto"
env = ["ENV_STATE=test"]
# ======================
# Hypothesis
# ======================
[tool.hypothesis]
max_examples = 200
deadline = 500

# ======================
# Coverage
# ======================
[tool.coverage.run]
branch = true
source = ["."]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

# ======================
# Commitizen
# ======================
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.5.2"
tag_format = "v$version"
version_files = ["pyproject.toml:version"]
update_changelog_on_bump = true
annotated_tag = true
